# schnur

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md  license.md  makefile  readme.md
docs/: Doxyfile
inc/: schnuerchen.h  schnur.h  string-library.h
src/: schnuerchen.c  schnur.c  string-library.c  string-library.h
test/: main.cpp  string-library.c  string-library.cpp
